# pySCUBA

./: CITING_SCUBA.md  CMakeLists.txt  LICENSE  LICENSE.md  MANIFEST.in  README.md  setup.py
demo/SCUBAChangeresidues/: SCUBAChangeresidues.py
demo/SCUBASD/Fixresidues/: SCUBASD.py  usr_para.pickle  usr_sd.par
demo/SCUBASD/buildpdb/: SCUBASD.py  usr_para.pickle  usr_sd.par
demo/SCUBASD/default/: SCUBASD.py  sd_pdbbuild.par  usr_para.pickle  usr_sd.par
demo/SCUBASD/quench/: SCUBASD.py  restraints1.txt  usr_para.pickle  usr_sd.par
demo/SCUBASD/relax/: SCUBASD.py  build0_final_ss.txt  usr_para.pickle  usr_sd.par
demo/SCUBASketch/: 3pvh.txt  3pvh_build0_final_ss.txt  3pvh_build1_final_ss.txt  3pvh_build2_final_ss.txt  README.MD  SCUBAsketch.py  gen_alphabetaN_crd.py  gen_beta_propellerN_crd.py  sketch.par
pySCUBA/: __init__.py
pySCUBA.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pySCUBA/OB/: CMakeLists.txt
pySCUBA/OB/src/: CMakeLists.txt
pySCUBA/OB/test/: CMakeLists.txt
pySCUBA/backbone/: backbonebuilder.h  backbonesite.h  sequencemotif.h
pySCUBA/backbone/src/: CMakeLists.txt_dynamic  CMakeLists.txt_static  backbonebuilder.cpp  backbonesite.cpp  mainchain.cpp  rminsef.cpp
pySCUBA/backbone/test/: CMakeLists.txt  gaminimizer.cpp  gaminimizer.cpp_bck
pySCUBA/data/: S1EnergyTable6  atomDirection  atomRadius0-bbSc0  atomRadius4-bbSc4  atomSasaIndex  atomSasaPoints  blosum62.txt  blosum62Double.txt  blosumInterface.txt  codonTable.txt  homoSeq.lib
pySCUBA/data/chemical/: atoms9  radius9  resLib
pySCUBA/data/para/: default.para
pySCUBA/data/ref/: hecRef9  hecSasaRef9  localRef  localRef.Ala-H-higher  localRef.bak  testref
pySCUBA/dataio/: controlfile.h  inputlines.h  parameters.h
pySCUBA/dataio/src/: CMakeLists.txt  CMakeLists.txt_dynamic  controlfile.cpp  datapaths.cpp  inputlines.cpp  pdbfolder.cpp
pySCUBA/dataio/test/: CMakeLists.txt
pySCUBA/designseq/: AtomicEnergyCalcular.h  DesignParameters.h  DesignTemplate.h  ProteinRep.h  RotamerLib.h
pySCUBA/designseq/src/: AtomLib.cpp  AtomicEnergyCalcular.cpp  DesignParameters.cpp  DesignTemplate.cpp  PackingTemplate.cpp  ProteinRep.cpp  RotamerLib.cpp  S1EnergyTable.cpp  S2MatrixFinder.cpp  ScoringTemplate.cpp  SeqMinimize.cpp  SingleSitePackingTemplate.cpp  StructureInfo.cpp
pySCUBA/designseq/test/: AnalysisPackingResult.cpp  BuildMutation.cpp  CMakeLists.txt  CalculateStructureInfo.cpp  DSBondEnergy.cpp  DoubleTargetDesign.cpp  DoubleTargetDesignIdt.cpp  DoubleTargetDesignWithIdentityRestrain.cpp  PDB2Seqs.cpp  PDB2SingleSeq.cpp  SeqIdentity.cpp  SingleMutationEnergy.cpp  SingleMutationScan.cpp  Test.cpp  Test40PDB.cpp  Test40PDBAADesign.cpp  Test40PDBIndividual.cpp  TestDesignSeq.cpp  TestDesignTemplate.cpp  TestPacking.cpp  TestPolarAtoms.cpp  TestProteinRep.cpp  TestSingleMutation.cpp  TrainingDesign.cpp  getBBHBinfo.cpp  getSSinfo.cpp
pySCUBA/dstl/: nrtopn.h  randomengine.h  sortindex.h  topn.h  vec2d.h
pySCUBA/dstl/src/: CMakeLists.txt  CMakeLists.txt_dynamic  pca.cpp
pySCUBA/dstl/test/: CMakeLists.txt
pySCUBA/geometry/: atomsasa.h  internalcrd.h  localframe.h  quatfit.h  rectgrid.h  relativeposition.h  rigidtransform.h  sphere.h  xyz.h
pySCUBA/geometry/src/: CMakeLists.txt  CMakeLists.txt_dynamic  CMakeLists.txt_static  quatfit.cpp  rigidtransform.cpp
pySCUBA/geometry/test/: CMakeLists.txt  testtransform.cpp
pySCUBA/iblock/: aasequtil.h  backboneff.h  blcktopo.h  blkselector.h  enefunc1d.h  internalcrds.h  intrctblck.h  intrctmol.h  intrctparam.h  loopreservoir.h  molmodeler.h  molsystmpara.h  nnterms.h  phipsicodes.h  phipsiterm.h  restrinteraction.h  ssrestraint.h  vsctypes.h
pySCUBA/iblock/src/: CMakeLists.txt_dynamic  CMakeLists.txt_static  blcktopo.cpp  blkselector.cpp  energycalculators.cpp  internalcrds.cpp  intrctblck.cpp  intrctmol.cpp  intrctmolcheckers.cpp  intrctpara.cpp  localhbenergy.cpp  localstrenergy.cpp  loopreservoir.cpp  nnterms.cpp  (+9 more)
pySCUBA/iblock/test/: CMakeLists.txt  SCUBAChangeResidues.cpp  SCUBASketch.cpp  SCUBAmakeLVG.cpp  buildsidechains.cpp  comparess.cpp  extendloopread.cpp  genrandomconfig.cpp  makeLVGintendedss.cpp  mkparfiletemplates.cpp  preprocesspdb.cpp  randomchain.cpp  readss.cpp  reduceloopread.cpp  testintrctmol.cpp  testmolmodeler.cpp
pySCUBA/include/: debuglevel.h  macros.h
pySCUBA/integrateddesign/: CMakeLists.txt
pySCUBA/pdbstatistics/test/: CMakeLists.txt  estimatecbpairene.cpp  estimatepbtetrabase.cpp  estimatephipsidistr.cpp  extractphipsi.cpp  linkerlengths.cpp  looplocations.cpp  testphipsidistr.cpp  testproteinblock.cpp  testscoresitepair.cpp  testssclassfier.cpp  testvirtualsidechain.cpp
pySCUBA/proteinrep/: aaconformer.h  isolatedpocket.h  pdbreader.h  pocketmodeler.h  residuestate.h  rotamerutil.h
pySCUBA/pybind11/: CMakeLists.txt
pySCUBA/pybind11/backbone/src/: CMakeLists.txt  pb_backbone.cpp  pb_backbonebuilder.cpp  pb_backbonesite.cpp
pySCUBA/pybind11/designseq/src/: CMakeLists.txt  pb_designseq.cpp
pySCUBA/pybind11/dstl/src/: CMakeLists.txt  pb_dstl.cpp
pySCUBA/pybind11/geometry/src/: CMakeLists.txt  __init__.py  atomsasa.cc  pb_atomsasa.cpp  pb_calculator.cpp  pb_crdtree.cpp  pb_geometry.cpp  pb_internalcrd.cpp  pb_localframe.cpp  pb_loopccd.cpp  pb_quaternioncrd.cpp  pb_quatfit.cpp  pb_rectgrid.cpp  pb_relativeposition.cpp  pb_rigidtransform.cpp  pb_rotation.cpp  pb_sphere.cpp  pb_spherepoints.cpp  pb_structalign.cpp  pb_xyz.cpp
pySCUBA/pybind11/iblock/src/: CMakeLists.txt  __init__.py  pb_iblock.cpp
pySCUBA/pybind11/proteinrep/src/: CMakeLists.txt  CMakeLists.txt.bak  pb_proteinrep.cpp  test_pb_aaconformer.cpp  test_pb_pdbreader.cpp
pySCUBA/pybind11/sampling/src/: CMakeLists.txt  pb_groupdistance.cpp  pb_sampling.cpp
pySCUBA/sampling/: groupdistance.h  ligandpep.h  ligpepsampler.h  loopsampler.h  loopsampler.h.bak  molsdrun.h  pocketdocker.h  restraints.h  restraints.h.bak  rmsdrestraintreader.h  runsddefaults.h  samplingutil.h  savedligpconfig.h  savedloops.h  screen.h  sdrunpara.h  shakebonds.h  stochasticdynamics.h  temperatureannealing.h
pySCUBA/utils/: randomgenerator.h  stringutil.h
(+1211 files in other folders)
