set(THIS_CPP_NAME iblock)
set(GEOM_SOURCE_FILES pb_${THIS_CPP_NAME}.cpp)
set(THIS_NAME iblock)
add_library(${THIS_NAME} ${GEOM_SOURCE_FILES})
#target_link_libraries(${THIS_NAME}  ${PYTHON_LIBRARIES} ${Boost_LIBRARIES})
target_link_libraries(${THIS_NAME}  ${PYTHON_LIBRARIES})
set_target_properties(${THIS_NAME} PROPERTIES PREFIX "")
file(GLOB USER_CPP ${USR_SRC_DIR}/iblock/src/*.cpp)
# file(GLOB USER_HEADER ${USR_SRC_DIR}/geometry/*.h)
pybind11_add_module(pb_${THIS_NAME} ${GEOM_SOURCE_FILES} ${USER_CPP})
# add_executable(pb_${THIS_NAME} ${GEOM_SOURCE_FILES} ${USER_CPP})
target_link_libraries(pb_${THIS_NAME} PRIVATE ${ALL_LIBS})