set(PROT_SOURCE_FILES ${USR_SRC_DIR}/proteinrep/src/pdbreader.cpp ${USR_SRC_DIR}/proteinrep/src/pdbrecord.cpp ${USR_SRC_DIR}/proteinrep/src/aaconformer.cpp ${USR_SRC_DIR}/dataio/src/inputlines.cpp ${USR_SRC_DIR}/dataio/src/datapaths.cpp ${USR_SRC_DIR}/proteinrep/src/intatomkey.cpp ${USR_SRC_DIR}/geometry/src/calculators.cpp ${USR_SRC_DIR}/geometry/src/quaternioncrd.cpp ${USR_SRC_DIR}/geometry/src/localframe.cpp ${USR_SRC_DIR}/proteinrep/src/rotamerutil.cpp ${USR_SRC_DIR}/pdbstatistics/src/phipsidistr.cpp ${USR_SRC_DIR}/designseq/src/ProteinRep.cpp ${USR_SRC_DIR}/designseq/src/RotamerLib.cpp ${USR_SRC_DIR}/designseq/src/RotamerGroup.cpp ${USR_SRC_DIR}/designseq/src/Rotamer.cpp ${USR_SRC_DIR}/designseq/src/RotamerEnergyBBDep.cpp ${USR_SRC_DIR}/designseq/src/StringTool.cpp ${USR_SRC_DIR}/designseq/src/ResName.cpp ${USR_SRC_DIR}/backbone/src/backbonesite.cpp ${USR_SRC_DIR}/proteinrep/src/idealgeometries.cpp ${USR_SRC_DIR}/dataio/src/splitstring.cpp)
pybind11_add_module(pb_proteinrep pb_proteinrep.cpp ${PROT_SOURCE_FILES})
target_link_libraries(pb_proteinrep PRIVATE ${ALL_LIBS})
